# usb2_emulation

./: .cpproj.yml  CMakeLists.txt  README.md
include/: common.hpp  computer.hpp  enums.hpp  keyboard.hpp  packet.hpp  signal.hpp
src/: main.cpp
